# factorio-board

./: .gitignore  Makefile  agent_loop.py  agent_loop_v2.py  player_actions.py  tools.py
docs/: index.html  results.json
fbsr_bridge/: README.md  RenderBP.java  fbsr_client.py  fbsr_worker.py
mod/: control.lua
rust_client/: Cargo.toml
rust_client/src/: event_mediator.rs  weave_manager.rs
